# algo_tinkoff

./: .gitignore  CMakeLists.txt  filetypes.xml  other.xml  vcs.xml
HW/1/: CMakeLists.txt
HW/1/A_Postfix/: CMakeLists.txt  main.cpp  postfix.in
HW/1/B_Olymp/: CMakeLists.txt  main.cpp  olymp.in
HW/1/C_Trucks/: CMakeLists.txt  main.cpp
HW/1/D_Brackets/: CMakeLists.txt  brackets.in  main.cpp
HW/1/E_March/: CMakeLists.txt  input  main.cpp  output
HW/1/F_Saloon/: CMakeLists.txt  main.cpp  saloon.in  saloon_2.in
HW/1/H_Min/: CMakeLists.txt  main.cpp
HW/2/: CMakeLists.txt
HW/2/A_Grasshopper/: CMakeLists.txt  main.cpp
HW/2/B_Horse/: CMakeLists.txt  main.cpp
HW/2/C_Horse_2/: CMakeLists.txt  main.cpp
HW/2/D_Calculator/: CMakeLists.txt  main.cpp  output
HW/2/E_PDD/: CMakeLists.txt  input  main.cpp  output
HW/2/F_Ones/: CMakeLists.txt  main.cpp  ones.ipynb  ones.py
HW/2/G_Rabbit/: CMakeLists.txt  main.cpp
HW/2/H_Smooth_nums/: CMakeLists.txt  ones.ipynb  ones.py
HW/3/: CMakeLists.txt
HW/3/A_Reverse/: CMakeLists.txt  main.cpp  reverse.out
HW/3/B_Mindist/: CMakeLists.txt  main.cpp
HW/3/C_Mindist_2/: CMakeLists.txt  main.cpp  mindist2.out
HW/3/D_Crazycalc/: CMakeLists.txt  main.cpp
HW/3/F_Bipartite/: CMakeLists.txt  main.cpp
HW/3/G_Tree/: CMakeLists.txt  main.cpp
HW/3/H_Components/: CMakeLists.txt  main.cpp
HW/3/I_Components_2/: CMakeLists.txt  main.cpp
HW/3/J_TopSort/: CMakeLists.txt  main.cpp
HW/3/K_Dijkstra/: CMakeLists.txt  main.cpp
HW/3/L_Distance/: CMakeLists.txt  main.cpp
HW/3/M_Floyd/: CMakeLists.txt  main.cpp
(+22 files in other folders)
