add_subdirectory(A_Reverse)
add_subdirectory(B_Mindist)
add_subdirectory(C_Mindist_2)
add_subdirectory(D_Crazycalc)
add_subdirectory(E_Details)
add_subdirectory(F_Bipartite)
add_subdirectory(G_Tree)
add_subdirectory(H_Components)
add_subdirectory(I_Components_2)
add_subdirectory(J_TopSort)
add_subdirectory(K_Dijkstra)
add_subdirectory(L_Distance)
add_subdirectory(M_Floyd)